--- a/lib/network/modules/components/NavigationHandler.css
+++ b/lib/network/modules/components/NavigationHandler.css
@@ -1,12 +1,54 @@
-div.vis-network div.vis-navigation div.vis-button {
-    width:34px;
-    height:34px;
-    -moz-border-radius: 17px;
-    border-radius: 17px;
+
+div.vis-network div.vis-navigation div.vis-round-panel {
+    width: 100px;
+    height: 100px;
+    bottom: 84px;
+    right: 5px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
     position:absolute;
     display:inline-block;
-    background-position: 2px 2px;
+    background-position: 0px 0px;
     background-repeat:no-repeat;
+    background-color: rgba(255, 255, 255, 0);
+    background-image: inline("nav-bk.png");
+    cursor: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 0;
+}
+
+div.vis-network div.vis-navigation div.vis-zoom-panel {
+    width: 38px;
+    height: 74px;
+    bottom: 5px;
+    right: 36px;
+    position:absolute;
+    display:inline-block;
+    background-position: 0px 0px;
+    background-repeat:no-repeat;
+    background-color: rgba(255, 255, 255, 0);
+    background-image: inline("zoom-bk.png");
+    cursor: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 0;
+}
+
+div.vis-network div.vis-navigation div.vis-button {
+    width:26px;
+    height:25px;
+    position:absolute;
+    display:inline-block;
+    background-color: rgba(255, 255, 255, 0);
     cursor: pointer;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -16,46 +58,129 @@ div.vis-network div.vis-navigation div.vis-button {
     user-select: none;
 }
 
-div.vis-network div.vis-navigation div.vis-button:hover {
-    box-shadow: 0 0 3px 3px rgba(56, 207, 21, 0.30);
+div.vis-network div.vis-navigation div.vis-button.vis-zoomIn {
+    background-image: inline("zoom-in.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 48px;
+    right: 42px;
 }
 
-div.vis-network div.vis-navigation div.vis-button:active {
-    box-shadow: 0 0 1px 3px rgba(56, 207, 21, 0.95);
+div.vis-network div.vis-navigation div.vis-button.vis-zoomOut {
+    background-image: inline("zoom-out.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 12px;
+    right: 42px;
 }
 
 div.vis-network div.vis-navigation div.vis-button.vis-up {
-    background-image: inline("upArrow.png");
-    bottom:50px;
-    left:55px;
+    background-image: inline("arrow-up.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 152px;
+    right: 42px;
 }
+
 div.vis-network div.vis-navigation div.vis-button.vis-down {
-    background-image: inline("downArrow.png");
-    bottom:10px;
-    left:55px;
+    background-image: inline("arrow-down.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 92px;
+    right: 42px;
 }
-div.vis-network div.vis-navigation div.vis-button.vis-left {
-    background-image: inline("leftArrow.png");
-    bottom:10px;
-    left:15px;
-}
+
 div.vis-network div.vis-navigation div.vis-button.vis-right {
-    background-image: inline("rightArrow.png");
-    bottom:10px;
-    left:95px;
+    background-image: inline("arrow-right.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 123px;
+    right: 12px;
 }
-div.vis-network div.vis-navigation div.vis-button.vis-zoomIn {
-    background-image: inline("plus.png");
-    bottom:10px;
-    right:15px;
-}
-div.vis-network div.vis-navigation div.vis-button.vis-zoomOut {
-    background-image: inline("minus.png");
-    bottom:10px;
-    right:55px;
-}
+
 div.vis-network div.vis-navigation div.vis-button.vis-zoomExtends {
-    background-image: inline("zoomExtends.png");
-    bottom:50px;
-    right:15px;
+    background-image: inline("zoom-extends.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 123px;
+    right: 42px;
+}
+
+div.vis-network div.vis-navigation div.vis-button.vis-left {
+    background-image: inline("arrow-left.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 123px;
+    right: 72px;
+}
+
+
+div.vis-network div.vis-navigation div.vis-button.vis-zoomIn:hover {
+    background-image: inline("zoom-in.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 48px;
+    right: 42px;
+}
+
+div.vis-network div.vis-navigation div.vis-button.vis-zoomOut:hover {
+    background-image: inline("zoom-out.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 12px;
+    right: 42px;
+}
+
+div.vis-network div.vis-navigation div.vis-button.vis-up:hover {
+    background-image: inline("arrow-up.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 152px;
+    right: 42px;
+}
+
+div.vis-network div.vis-navigation div.vis-button.vis-down:hover {
+    background-image: inline("arrow-down.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 92px;
+    right: 42px;
+}
+
+div.vis-network div.vis-navigation div.vis-button.vis-right:hover {
+    background-image: inline("arrow-right.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 123px;
+    right: 12px;
+}
+
+div.vis-network div.vis-navigation div.vis-button.vis-zoomExtends:hover {
+    background-image: inline("zoom-extends.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 122px;
+    right: 41px;
+}
+
+div.vis-network div.vis-navigation div.vis-button.vis-left:hover {
+    background-image: inline("arrow-left.png");
+    cursor: pointer;
+    width: 26px;
+    height: 25px;
+    bottom: 123px;
+    right: 72px;
 }
