--- a/lib/network/modules/components/NavigationHandler.css
+++ b/lib/network/modules/components/NavigationHandler.css
@@ -43,6 +43,27 @@ div.vis-network div.vis-navigation div.vis-zoom-panel {
     z-index: 0;
 }
 
+div.vis-network div.vis-navigation div.vis-tool-box {
+    width: 75px;
+    height: 200px;
+    top: 10px;
+    left: 10px;
+    position:absolute;
+    display:inline-block;
+    background-position: 0px 0px;
+    background-repeat:no-repeat;
+    background-color: rgba(255, 255, 255, 0.6);
+
+    cursor: pointer;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 0;
+}
+
 div.vis-network div.vis-navigation div.vis-button {
     width:26px;
     height:25px;
